force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>予約投影</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>予約投影名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>