force-app/main/default/objects/Booking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>管理元Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>予約投影</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>