force-app/main/default/objects/Booking__c/fields/Admin_Note__c.field-meta.xml
<CustomField>
    <fullName>Admin_Note__c</fullName>
    <label>管理者メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>