force-app/main/default/objects/Booking__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <label>予約日</label>
    <type>Date</type>
</CustomField>