force-app/main/default/objects/Booking__c/fields/AppointmentNumber__c.field-meta.xml
<CustomField>
    <fullName>AppointmentNumber__c</fullName>
    <label>予約番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>