force-app/main/default/objects/Booking__c/fields/BookingExternalId__c.field-meta.xml
<CustomField>
    <fullName>BookingExternalId__c</fullName>
    <externalId>true</externalId>
    <label>外部ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>