force-app/main/default/objects/Booking__c/fields/CurrentVersion__c.field-meta.xml
<CustomField>
    <fullName>CurrentVersion__c</fullName>
    <label>現在バージョン</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>