force-app/main/default/objects/Booking__c/fields/LastEventId__c.field-meta.xml
<CustomField>
    <fullName>LastEventId__c</fullName>
    <label>イベントID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>