force-app/main/default/objects/Booking__c/fields/SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus__c</fullName>
    <label>同期状態</label>
    <length>16</length>
    <type>Text</type>
</CustomField>