force-app/main/default/objects/Booking__c/fields/TimeSlot__c.field-meta.xml
<CustomField>
    <fullName>TimeSlot__c</fullName>
    <label>時間枠</label>
    <length>10</length>
    <type>Text</type>
</CustomField>